--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     
-    <title>TypeScript</title>
+    <title>TypeScript...</title>
 </head>
 <body>
     <script src="main.js" ></script>
